--- a/paascloud-provider-uac-dev.yml
+++ b/paascloud-provider-uac-dev.yml
@@ -5,7 +5,7 @@ spring:
     joda-date-time-format: yyyy-MM-dd HH:mm:ss
     date-format: yyyy-MM-dd HH:mm:ss
   datasource:
-    url: jdbc:mysql://paascloud-db-mysql:3306/paascloud_uac?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://paascloud-db-mysql:3306/paascloud_uac?serverTimezone=UTC&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
     
